Replace diary with exercises

--- a/_pages/exercises-archive.html
+++ b/_pages/exercises-archive.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Eye Diary"
-permalink: /diary/
+title: "Eye Exercises"
+permalink: /exercises/
 author_profile: false
 ---
 
 {% include base_path %}
 
 <div class="grid__wrapper">
-  {% for post in site.diary %}
+  {% for post in site.exercises %}
     {% include archive-single.html type="grid" %}
   {% endfor %}
 </div>
