--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 ---
 layout: archive
+title: "Improve your Eye Wellbeing"
+excerpt: "Welcome to Friederike Wild your coach for eye wellbeing for healthy and vital vision."
 author_profile: true
+sitemap: true
+read_time: false
+comments: false
+share: true
+related: false
+
+header:
+  overlay_color: "#8492cd"
+  overlay_image: home-page-feature.jpg
+
 ---
 
 {% include base_path %}
