--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "Improve your Eye Wellbeing"
-excerpt: "Welcome to Friederike Wild your coach for eye wellbeing for healthy and vital vision."
+excerpt: "Friederike Wild your coach for eye wellbeing for healthy and vital vision."
 author_profile: true
 sitemap: true
 read_time: false
