Fix the splash grid

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@ header:
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts }}</h3>
 
-{% for post in paginator.posts %}
-  {% include archive-single.html type="grid" %}
-{% endfor %}
+<div class="grid__wrapper">
+  {% for post in paginator.posts %}
+    {% include archive-single.html type="grid" %}
+  {% endfor %}
+</div>
 
 {% include paginator.html %}
