Update splash entries to be shown square

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ header:
 
 <div class="grid__wrapper">
   {% for post in site.data.splash %}
-    {% include archive-single.html type="grid" %}
+    {% include archive-single.html type="grid" format="splash" %}
   {% endfor %}
 </div>
 
