--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "Improve your Eye Wellbeing"
-excerpt: "Friederike Wild your coach for eye wellbeing for healthy and vital vision."
+excerpt: "Learn with me how to maintain a healthy sight, as well as to prevent and improve vision "
 author_profile: true
 sitemap: true
 read_time: false
