Prepare treats collection

--- a/_pages/treats-archive.html
+++ b/_pages/treats-archive.html
@@ -1,14 +1,13 @@
 ---
 layout: archive
-title: "Eye Exercises"
-permalink: /exercises/
+title: "Eye Treats"
+permalink: /treats/
 author_profile: false
 ---
 
-{% include base_path %}
-
 <div class="grid__wrapper">
-  {% for post in site.exercises %}
+  {% for post in site.treats %}
     {% include archive-single.html type="grid" %}
   {% endfor %}
 </div>
+
