--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -10,7 +10,13 @@ author_profile: false
 
 {% for collection in site.collections %}
   {% unless collection.output == false or collection.label == "posts" %}
-    {% capture label %}{{ collection.label }}{% endcapture %}
+
+    {% if collection.title %}
+      {% capture label %}{{ collection.title }}{% endcapture %}
+    {% else %}
+      {% capture label %}{{ collection.label }}{% endcapture %}
+    {% endif %}
+
     {% if label != written_label %}
       <h2 id="{{ label | slugify }}" class="archive__subtitle">{{ label }}</h2>
       {% capture written_label %}{{ label }}{% endcapture %}
