--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 layout: archive
 title: "Improve your Eye Wellbeing"
 excerpt: "Learn with me how to maintain a healthy sight, as well as to prevent and improve vision "
+title_included: true
 author_profile: true
 sitemap: true
 read_time: false
 comments: false
-share: true
+share: false
 related: false
 
 header:
