--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "Improve your Eye Wellbeing"
-excerpt: "Learn with me how to maintain a healthy sight, as well as to prevent and improve vision "
+excerpt: "Learn with me how to maintain a healthy sight, as well as to prevent and improve vision holistically"
 title_included: true
 author_profile: true
 sitemap: true
