* Improve seo of main page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "Improve your Eye Wellbeing"
-excerpt: "Learn with me how to maintain a healthy sight, as well as to prevent and improve vision holistically"
+excerpt: "Learn how to maintain a healthy sight, as well as to prevent and improve your vision holistically."
 title_included: true
 author_profile: true
 sitemap: true
@@ -13,6 +13,7 @@ related: false
 header:
   overlay_color: "#8492cd"
   overlay_image: home-page-feature.jpg
+  image: title_image.jpg
 
 vimeoId: 227720622
 
